Fix layout bug in footer

--- a/theme/scss/modules/_site-footer.scss
+++ b/theme/scss/modules/_site-footer.scss
@@ -16,14 +16,17 @@
 .site-footer-section {
     flex-basis: 0;
     flex-grow: 1;
-    padding: 0 1em;
 
-    &:first-of-type {
-        padding-left: 0;
-    }
+    @include laptop {
+        padding: 0 1em;
 
-    &:last-of-type {
-        padding-right: 0;
+        &:first-of-type {
+            padding-left: 0;
+        }
+
+        &:last-of-type {
+            padding-right: 0;
+        }
     }
 }
 
